Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -24,3 +24,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || P || [PlanningAuthoritiesP] ||
 || Q || ||
 || R || [PlanningAuthoritiesR] ||
+|| S || [PlanningAuthoritiesS] ||
