Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -25,3 +25,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || Q || ||
 || R || [PlanningAuthoritiesR] ||
 || S || [PlanningAuthoritiesS] ||
+|| T || [PlanningAuthoritiesT] ||
