Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -27,3 +27,4 @@ The list of authorities I am getting them from is here http://www.theplanningdir
 || S || [PlanningAuthoritiesS] ||
 || T || [PlanningAuthoritiesT] ||
 || U || [PlanningAuthoritiesU] ||
+|| V || [PlanningAuthoritiesV] ||
