--- a/wiki/PlanningAuthoritiesW.wiki
+++ b/wiki/PlanningAuthoritiesW.wiki
@@ -1,14 +1,14 @@
-||  || Wakefield City Council || Wakefield ||
-||  || Walsall Metropolitan Borough Council || Walsall ||
-||  || London Borough of Waltham Forest || Chingford ||
-||  || Wandsworth Borough Council || London ||
-||  || Wansbeck District Council || Bedlington ||
-||  || Warrington Borough Council || Warrington ||
-||  || Warwick District Council || Leamington Spa ||
-||  || Warwickshire County Council || Warwick ||
-||  || Watford Council || Watford ||
-||  || Waveney District Council || Beccles ,Bungay, Halesworth, Lowestoft ||
-||  || Waverley Borough Council || Godalming ||
+|| Done || Wakefield City Council || Wakefield || PublicAccess || http://planning.wakefield.gov.uk/publicaccess/tdc/tdc_home.aspx ||
+|| Paul's Scraper || Walsall Metropolitan Borough Council || Walsall || PaulD has written a scraper for this || http://www2.walsall.gov.uk/dcaccess/planning/Planning-Registers/weeklylist/Weekly-list.asp ||
+||  || London Borough of Waltham Forest || Chingford || PlanningExplorer || http://planning.walthamforest.gov.uk/PlanningExplorer/GeneralSearch.aspx ||
+||  || Wandsworth Borough Council || London || searchable by date received || http://www.wandsworth.gov.uk/gis/search/Search.aspx ||
+|| Done || Wansbeck District Council || Bedlington || Provided to us by the council :-) || ||
+||  || Warrington Borough Council || Warrington || IE only || http://www.warrington.gov.uk/Environmentandplanning/Planning/Searching_Planning_Applications_On-Line.aspx ||
+||  || Warwick District Council || Leamington Spa || searchable by validated date || http://estates.warwickdc.gov.uk/planningapps/forms/searchStartDate.aspx ||
+||  || Warwickshire County Council || Warwick || html list of current applications || http://www.warwickshire.gov.uk/Web/corporate/pages.nsf/Pages%20by%20Department/A6E30208F224959D8025724A0034D717 ||
+|| Broken || Watford Council || Watford || PublicAccess - database appears to be empty || http://ww3.watford.gov.uk/publicaccess/dc/DcApplication/application_searchform.aspx ||
+|| Done || Waveney District Council || Beccles ,Bungay, Halesworth, Lowestoft || PublicAccess || http://publicaccess.waveney.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
+||  || Waverley Borough Council || Godalming || No date search, but html list of 100 most recent apps || http://waverweb.waverley.gov.uk/live/wbc/pwl.nsf/webdisplaypubliclist?OpenForm&Seq=2#_RefreshKW_showmeby ||
 ||  || Wealden District Council || Crowborough ||
 ||  || Wear Valley District Council || Crook ||
 ||  || Wellingborough Borough Council || Wellingborough ||
