--- a/wiki/PlanningAuthoritiesW.wiki
+++ b/wiki/PlanningAuthoritiesW.wiki
@@ -9,23 +9,23 @@
 || Broken || Watford Council || Watford || PublicAccess - database appears to be empty || http://ww3.watford.gov.uk/publicaccess/dc/DcApplication/application_searchform.aspx ||
 || Done || Waveney District Council || Beccles ,Bungay, Halesworth, Lowestoft || PublicAccess || http://publicaccess.waveney.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 ||  || Waverley Borough Council || Godalming || No date search, but html list of 100 most recent apps || http://waverweb.waverley.gov.uk/live/wbc/pwl.nsf/webdisplaypubliclist?OpenForm&Seq=2#_RefreshKW_showmeby ||
-||  || Wealden District Council || Crowborough ||
-||  || Wear Valley District Council || Crook ||
-||  || Wellingborough Borough Council || Wellingborough ||
-||  || Welwyn-Hatfield District Council || WELWYN GARDEN CITY ||
-||  || West Berkshire Council || Newbury ||
-||  || West Devon Borough Council || Okehampton, Tavistock ||
-||  || West Dorset District Council || Dorchester ||
-||  || West Dunbartonshire Council || Clydebank, Dumbarton ||
-||  || West Lancashire District Council || Ormskirk ||
-||  || West Lindsey District Council || Gainsborough ||
-||  || West Lothian Council || Linlithgow ||
-||  || West Oxfordshire District Council || Witney ||
-||  || West Somerset District Council || Taunton ||
-||  || West Sussex County Council || Chichester ||
-||  || West Wiltshire District Council || Trowbridge ||
-||  || Westminster City Council || LONDON ||
-||  || Weymouth & Portland Borough Council || Weymouth ||
+||  || Wealden District Council || Crowborough || searchable by date received || http://www.planning.wealden.gov.uk/aspxpages/Search.aspx ||
+|| Done || Wear Valley District Council || Crook || ApplicationSearchServlet || http://planning.wearvalley.gov.uk/portal/servlets/ApplicationSearchServlet ||
+|| Done || Wellingborough Borough Council || Wellingborough || ApplicationSearchServlet || http://planning.wellingborough.gov.uk/portal/ ||
+||  || Welwyn-Hatfield District Council || WELWYN GARDEN CITY || fastweb || https://fastweb.welhat.gov.uk/results.asp ||
+|| Ready || West Berkshire Council || Newbury || PublicAccess || http://ww2.westberks.gov.uk/publicaccess/tdc/ ||
+||  || West Devon Borough Council || Okehampton, Tavistock || searchable by date || http://www.westdevon.gov.uk/planningapp/planningsearch.aspx ||
+||  || West Dorset District Council || Dorchester || searchable by date raised || http://webapps.westdorset-dc.gov.uk/PlanningApplications/Pages/ApplicationSearch.aspx ||
+||  || West Dunbartonshire Council || Clydebank, Dumbarton || Weekly lists as word docs || http://www.wdcweb.info/buildingandplanning/DisplayArticle.asp?ID=1951 ||
+|| Done || West Lancashire District Council || Ormskirk || PublicAccess || http://publicaccess.westlancsdc.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
+||  || West Lindsey District Council || Gainsborough || searchable by some kind of date - complete dog's breakfast in FireFox... || http://planning.west-lindsey.gov.uk/planning/ ||
+||  || West Lothian Council || Linlithgow || weekly lists as pdf || http://www.wlonline.org.uk/content/housing/planning/94575/1424627/?s=79277 ||
+|| In progress || West Oxfordshire District Council || Witney || PlanningExplorer || http://planning.westoxon.gov.uk/MVM/Online/PL/home.aspx ||
+||  || West Somerset District Council || Taunton || searchable by date || http://www.westsomersetonline.gov.uk/plan_search.asp?pid=622&area=2 ||
+||  || West Sussex County Council || Chichester || searchable by date registered || http://eplanning.westsussex.gov.uk/ePlanningOPS/searchPageLoad.do ||
+|| Done || West Wiltshire District Council || Trowbridge || PublicAccess || http://planning.westwiltshire.gov.uk/publicaccess/ ||
+||  || Westminster City Council || LONDON || searchable by date registered || http://www3.westminster.gov.uk/planningapplications/currentsearch-form.cfm ||
+||  || Weymouth & Portland Borough Council || Weymouth || last 28 days planning apps in html || http://www.weymouth.gov.uk/Planning/applications/newapps.asp?svid=212 ||
 ||  || Wigan Metropolitan Borough Council || Wigan ||
 ||  || Wiltshire County Council || Trowbridge ||
 ||  || Winchester City Council || Winchester ||
