--- a/wiki/PlanningAuthoritiesList.wiki
+++ b/wiki/PlanningAuthoritiesList.wiki
@@ -6,6 +6,8 @@ I'm planning on having a list here of all the planning authorities in the UK, an
 
 The list of authorities I am getting them from is here http://www.theplanningdirectory.co.uk/auto/index.html.
 
+Another useful site which lists the planning software used by different councils: http://www.brent.gov.uk/egr.nsf/SCV?ReadForm&View=UPTLA&Category=Planning
+
 || A || [PlanningAuthoritiesA] ||
 || B || [PlanningAuthoritiesB] ||
 || C || [PlanningAuthoritiesC] ||
