Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -45,3 +45,4 @@
   * Teignbridge (timing out?)
   * Winchester (timing out?)
   * Dacorum (always returns no applications)
+  * Luton (script returns nothing)
