Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -1,5 +1,6 @@
 ||  || Neath & Port Talbot County Council || Neath || weekly lists as pdf || http://www.neath-porttalbot.gov.uk/planning/dloads.cfm ||
-|| Ready || New Forest District Council || Lyndhurst || Acolnet || http://web01.newforestnpa.gov.uk/planningpages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Ready || New Forest National Park Authority || Lyndhurst || Acolnet || http://web01.newforestnpa.gov.uk/planningpages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| || New Forest District Council || Acolnet || http://web3.newforest.gov.uk/planningonline/acolnetcgi.gov ||
 || || Newark & Sherwood District Council || Newark || eplanning, searchable by date|| http://www.nsdc.info/eplanning/default.aspx?sid=1&sindex=1&id=5 ||
 || Ready || Newcastle upon Tyne City Council || Newcastle upon Tyne || PublicAccess || ||
 || Ready || Newcastle-under-Lyme Borough Council || Newcastle-under-Lyme || PublicAccess || ||
