Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -22,6 +22,7 @@
 
 = Working and ready to deploy =
 
+  * New Forest DC
 
 = Scrapes done, but sites/scrapers broken =
   * Bassetlaw (no postcodes)
