--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -24,6 +24,7 @@
 
   * New Forest DC
   * North Hertfordshire (oops... I'd commented out the class it all depends on)
+  * Teignbridge (This never times out for me... must investigate what goes wrong on the server)
 
 = Scrapes done, but sites/scrapers broken =
   * Bassetlaw (no postcodes)
@@ -42,7 +43,6 @@
   * Newcastle-under-Lyme (timing out?)
   * North Wiltshire (timing out?)
   * Stratford (timing out?)
-  * Teignbridge (timing out?)
   * Winchester (timing out?)
   * Dacorum (always returns no applications)
   * Luton (script returns nothing)
