--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -26,6 +26,7 @@
   * North Hertfordshire (oops... I'd commented out the class it all depends on)
   * Teignbridge (This never times out for me... must investigate what goes wrong on the server)
   * Dundee
+  * East Devon (db not empty - see eg 11/7/2007)
 
 = Scrapes done, but sites/scrapers broken =
   * Bassetlaw (no postcodes)
@@ -33,7 +34,6 @@
   * Derby (no postcodes)
   * Doncaster (site down when attempted to test?)
   * Durham (City) - database appears to be empty though...
-  * East Devon (Db Empty?)
   * East Dorset (data not comming though)
   * Fenland (data not comming though)
   * Gateshead (timing out?)
