--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -29,6 +29,9 @@
   * East Devon (db not empty - see eg 11/7/2007)
   * Gateshead (not timing out today)
   * Hammersmith and Fulham (not timing out today)
+  * Newcastle (not timing out today)
+  * Newcastle-under-Lyme (not timing out today)
+  * North Wiltshire (not timing out today)
 
 = Scrapes done, but sites/scrapers broken =
   * Bassetlaw (no postcodes)
@@ -39,9 +42,6 @@
   * East Dorset (data not comming though)
   * Fenland (data not comming though)
   * Wolverhampton (empty database)
-  * Newcastle (timing out?)
-  * Newcastle-under-Lyme (timing out?)
-  * North Wiltshire (timing out?)
   * Stratford (timing out?)
   * Winchester (timing out?)
   * Dacorum (always returns no applications)
