Edited wiki page through web user interface.

--- a/wiki/FastWeb.wiki
+++ b/wiki/FastWeb.wiki
@@ -1,5 +1,7 @@
 #summary List of councils using FastWeb
 
+There is now a scraper written in python for FastWeb sites. The ones that I know of so far are:
+
   * Craven
   * Eastleigh
   * Eden
@@ -10,3 +12,4 @@
   * Wyre Forest
 
 Redcar is listed as being FastWeb here: http://www.brent.gov.uk/egr.nsf/SCV?ReadForm&View=UseByProductName&Category=FastPLANNING but this doesn't seem to be the case.
+
