--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -26,7 +26,7 @@
 || || South Hams District Council || Totnes || searchable by date || http://www.southhams.gov.uk/index/business_index/ksp_development_and_planning/spec-search-planning-apps.htm ||
 || || South Holland District Council || Spalding || pdf list of recent planning applications || http://www.sholland.gov.uk/services/service316.htm ||
 || || South Kesteven District Council || Grantham || site currently down || http://www.southkesteven.gov.uk/Planning/ ||
-|| || South Lakeland District Council || Kendal || fastweb - searchable by date || http://www.southlakeland.gov.uk/fastweb/search.asp ||
+|| Ready || South Lakeland District Council || Kendal || FastWeb || http://www.southlakeland.gov.uk/fastweb/search.asp ||
 || || South Lanarkshire Council || East Kilbride, Hamilton, Lanark, Rutherglen || pdf file of recent apps || http://www.southlanarkshire.gov.uk/portal/page/portal/EXTERNAL_WEBSITE_DEVELOPMENT/SLC_ONLINE_HOME/SLC_ATOZ/PUBLICATION_ATOZ/RELATED_PUBLICATION/?keyword1=currentplanningappsdoc ||
 || || South Norfolk Council || Long Stratton || searchable by date || http://planning.south-norfolk.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || || South Northamptonshire || Towcester || searchable by date || http://snc.planning-register.co.uk/PlanAppSrch.asp ||
@@ -59,7 +59,7 @@
 || Done || Sunderland City Council || Sunderland || PublicAccess || http://www.sunderland.gov.uk/publicaccess/ ||
 || || Surrey County Council || Kingston upon Thames || can get links to all current applications by searching with blank box || http://www1.surreycc.gov.uk/mwplan/search.cfm ||
 || In progress || Surrey Heath Borough Council || Camberley || acolnet, but defeats my parser somehow :-( || https://www.public.surreyheath-online.gov.uk/whalecom60b1ef305f59f921/whalecom0/Scripts/PlanningPagesOnline/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-|| || Sutton Borough Council || Carshalton || fastweb - current apps in html || http://82.43.4.135/FASTWEB/welcome.asp ||
+|| Ready || Sutton Borough Council || Carshalton || FastWeb || http://82.43.4.135/FASTWEB/welcome.asp ||
 || || Swale Borough Council || Sittingbourne || ukplanning and weekly lists as pdf|| http://www.ukplanning.com/ukp/custom/forwards/selectandsearch.jsp?council=Swale%20Borough%20Council&fwd=search , http://www.swale.gov.uk/index.cfm?articleid=4368||
 || || Swansea City & County Council || Swansea || searchable by date || http://www2.swansea.gov.uk/MVM/online/PL/GeneralSearch.aspx ||
 || Done || Swindon Borough Council || Swindon || PublicAccess || http://194.73.99.13/publicaccess/propdb/property/property_searchform.aspx ||
