--- a/wiki/PlanningAuthoritiesW.wiki
+++ b/wiki/PlanningAuthoritiesW.wiki
@@ -6,7 +6,7 @@
 ||  || Warrington Borough Council || Warrington || IE only || http://www.warrington.gov.uk/Environmentandplanning/Planning/Searching_Planning_Applications_On-Line.aspx ||
 ||  || Warwick District Council || Leamington Spa || searchable by validated date || http://estates.warwickdc.gov.uk/planningapps/forms/searchStartDate.aspx ||
 ||  || Warwickshire County Council || Warwick || html list of current applications || http://www.warwickshire.gov.uk/Web/corporate/pages.nsf/Pages%20by%20Department/A6E30208F224959D8025724A0034D717 ||
-|| Broken || Watford Council || Watford || PublicAccess - database appears to be empty || http://ww3.watford.gov.uk/publicaccess/dc/DcApplication/application_searchform.aspx ||
+|| Ready || Watford Council || Watford || PublicAccess || http://ww3.watford.gov.uk/publicaccess/dc/DcApplication/application_searchform.aspx ||
 || Done || Waveney District Council || Beccles ,Bungay, Halesworth, Lowestoft || PublicAccess || http://publicaccess.waveney.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 ||  || Waverley Borough Council || Godalming || No date search, but html list of 100 most recent apps || http://waverweb.waverley.gov.uk/live/wbc/pwl.nsf/webdisplaypubliclist?OpenForm&Seq=2#_RefreshKW_showmeby ||
 ||  || Wealden District Council || Crowborough || searchable by date received || http://www.planning.wealden.gov.uk/aspxpages/Search.aspx ||
